<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/step_btn_handler"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/handler"/>
        <Button
            android:id="@+id/step_btn_threadPool"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_handler"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/threadPool"/>
        <Button
            android:id="@+id/step_btn_Reflect"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_threadPool"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/Reflect"/>
        <Button
            android:id="@+id/step_btn_volley"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@+id/step_btn_Reflect"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/volley"/>
        <Button
            android:id="@+id/step_btn_okhttp"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@+id/step_btn_volley"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/okhttp"/>
        <Button
            android:id="@+id/step_btn_io"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@+id/step_btn_okhttp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/io"/>
        <Button
            android:id="@+id/step_btn_json"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_io"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/json"/>
        <Button
            android:id="@+id/step_btn_xml"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_json"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/xml"/>

        <Button
            android:id="@+id/step_btn_genericity"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_xml"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/genericity"/>

        <Button
            android:id="@+id/step_btn_itemAnimator"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_genericity"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/itemAnimator"/>

        <Button
            android:id="@+id/step_btn_focus"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_itemAnimator"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/focus"/>

        <Button
            android:id="@+id/step_btn_switcher"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_focus"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/switcher"/>

        <Button
            android:id="@+id/step_btn_viewStub"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_switcher"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/viewStub"/>

        <Button
            android:id="@+id/step_btn_viewpager"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_viewStub"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/viewPager"/>

        <Button
            android:id="@+id/step_btn_motion"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_viewpager"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="motion"
            />

        <Button
            android:id="@+id/step_btn_gesture"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_motion"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="gesture"
            />

        <Button
            android:id="@+id/step_btn_encrypt"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_below="@id/step_btn_gesture"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="encrypt"
            />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
