<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/step_btn_fileInputStream"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/fileInputStream"/>
            <Button
                android:id="@+id/step_btn_fileOutputStream"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_below="@+id/step_btn_fileInputStream"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/fileOutputStream"/>
            <Button
                android:id="@+id/step_btn_bufferedInputStream"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_below="@+id/step_btn_fileOutputStream"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/bufferedInputStream"/>
            <Button
                android:id="@+id/step_btn_bufferedOutputStream"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_below="@+id/step_btn_bufferedInputStream"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/bufferedOutputStream"/>
            <Button
                android:id="@+id/step_btn_dataInputStream"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_below="@+id/step_btn_bufferedOutputStream"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/dataInputStream"/>
            <Button
                android:id="@+id/step_btn_dataOutputStream"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_below="@+id/step_btn_dataInputStream"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/dataOutputStream"/>
            <Button
                android:id="@+id/step_btn_inputStreamReader"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_below="@+id/step_btn_dataOutputStream"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/inputStreamReader"/>
            <Button
                android:id="@+id/step_btn_outputStreamWriter"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_below="@+id/step_btn_inputStreamReader"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/outputStreamWriter"/>
            <Button
                android:id="@+id/step_btn_bufferedReader"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_below="@+id/step_btn_outputStreamWriter"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/bufferedReader"/>
            <Button
                android:id="@+id/step_btn_bufferedWriter"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_below="@+id/step_btn_bufferedReader"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/bufferedWriter"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
