<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_horizonal">

    <Button
        android:id="@+id/step_btn_cacheThreadPool"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/cacheThreadPool"/>
    <Button
        android:id="@+id/step_btn_fixedThreadPool"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_cacheThreadPool"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/fixedThreadPool"/>
    <Button
        android:id="@+id/step_btn_scheduleThreadPool"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_fixedThreadPool"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/scheduleThreadPool"/>
    <Button
        android:id="@+id/step_btn_singleExecutor"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_scheduleThreadPool"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/singleThreadExecutor"/>
    <Button
        android:id="@+id/step_btn_otherExecutor"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_singleExecutor"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/otherExecutor"/>
</RelativeLayout>
