<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/step_btn_genericity_class"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/genericity_class"
        />
    <Button
        android:id="@+id/step_btn_genericity_interface"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_genericity_class"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/genericity_interface"
        />
    <Button
        android:id="@+id/step_btn_genericity_method"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_genericity_interface"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/genericity_method"
        />
    <Button
        android:id="@+id/step_btn_genericity_up_bound"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_genericity_method"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/genericity_up_bound"
        />
    <Button
        android:id="@+id/step_btn_genericity_down_bound"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_genericity_up_bound"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/genericity_down_bound"/>
</RelativeLayout>
