<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/step_btn_contruct_jsonObject"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/construct_jsonObject"
        />
    <Button
        android:id="@+id/step_btn_destruct_jsonObject"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_contruct_jsonObject"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/destruct_jsonObject"
        />
    <Button
        android:id="@+id/step_btn_construct_jsonStringer"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_destruct_jsonObject"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/construct_jsonStringer"
        />
    <Button
        android:id="@+id/step_btn_desttruct_jsonStringer"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_below="@+id/step_btn_construct_jsonStringer"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/destruct_jsonStringer"
        />
</RelativeLayout>
